@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2024 Obeo.
+ * Copyright (c) 2024, 2025 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -17,14 +17,13 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import org.eclipse.syson.sysml.FeatureTyping;
 import org.eclipse.syson.sysml.MetadataDefinition;
 import org.eclipse.syson.sysml.MetadataUsage;
-import org.eclipse.syson.sysml.OwningMembership;
 import org.eclipse.syson.sysml.SysmlFactory;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 /**
  * Tests for {@link MetadataUsageImpl}.
- * 
+ *
  * @author Arthur Daussy
  */
 public class MetadataUsageImplTest {
@@ -35,16 +34,14 @@ public class MetadataUsageImplTest {
     @DisplayName("Test the implementation of getMetadataDefinition method")
     public void getMetadataDefinition() {
 
-        MetadataDefinition metaData1 = fact.createMetadataDefinition();
+        MetadataDefinition metaData1 = this.fact.createMetadataDefinition();
         metaData1.setDeclaredName("m1");
 
-        FeatureTyping featuringType = fact.createFeatureTyping();
+        FeatureTyping featuringType = this.fact.createFeatureTyping();
         featuringType.setType(metaData1);
 
-        MetadataUsage metaDataUsage = fact.createMetadataUsage();
-        OwningMembership owningMember = fact.createOwningMembership();
-        owningMember.getOwnedRelatedElement().add(featuringType);
-        metaDataUsage.getOwnedRelationship().add(owningMember);
+        MetadataUsage metaDataUsage = this.fact.createMetadataUsage();
+        metaDataUsage.getOwnedRelationship().add(featuringType);
 
         assertEquals(metaData1, metaDataUsage.getMetadataDefinition());
     }
